Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 
         <p>I am finalizing my Doctor of Arts in Aalto University school of Arts, Design and Architecture, in <a href="http://legroup.uiah.fi">Learning Environments Research Group</a>. Mail me at firstname-dot-lastname-at-aalto-dot-fi.</p>
 
+<h2>
+<a id="kataja---visualizing-biolinguistics" class="anchor" href="#kataja---visualizing-biolinguistics" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://www.kataja.purma.fi">Kataja - visualizing biolinguistics</a>
+</h2>
+
 <p><a href="https://github.com/jpurma" class="user-mention">@jpurma</a> -- see what I've been doing lately in GitHub </p>
 
 <h3>
