Let's have some progress on my pages

--- a/index.html
+++ b/index.html
@@ -1,54 +1,117 @@
 <!doctype html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Jukka Purma by jpurma</title>
+    <title>Jukka Purma / Tmi Ihmekoodi / jpurma</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!--[if lt IE 8]>
     <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/jpurma">View On GitHub</a></li>
-        </nav>
-      </div><!-- end header -->
+</head>
+<body>
+<header>
+    <nav>
+        <a href="https://github.com/jpurma">View On GitHub</a>
+    </nav>
+</header>
 
-    <div class="wrapper">
+<div class="wrapper">
 
-      <section>
+    <section>
         <div id="title">
-          <h1>Jukka Purma</h1>
-          <p>fine digital instruments for biolinguistics </p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/jpurma">jpurma</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+            <h1>Jukka Purma</h1>
+            <p>Software for linguistics, research and for public benefit</p>
+            <hr>
+            <span class="credits left">See me on GitHub <a href="https://github.com/jpurma" class="user-mention">@jpurma</a></span>
+            <span class="credits right">Hosted on GitHub Pages &mdash; Theme based on <a href="https://github.com/mattgraham/midnight">midnight</a> theme by <a
+                    href="https://madebygraham.com">mattgraham</a></span>
         </div>
 
-        <p>I am finalizing my Doctor of Arts in Aalto University school of Arts, Design and Architecture, in <a href="http://legroup.uiah.fi">Learning Environments Research Group</a>. Mail me at firstname-dot-lastname-at-aalto-dot-fi.</p>
+        <p>I make visualisations and natural language syntax parsers with Python & Javascript. I am <span
+                class="yellow-tag">partially&nbsp;available</span> for freelance software / fullstack development. </p>
+    </section>
 
-<h2>
-<a id="kataja---visualizing-biolinguistics" class="anchor" href="#kataja---visualizing-biolinguistics" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://www.kataja.purma.fi">Kataja - visualizing biolinguistics</a>
-</h2>
+    <section>
+        <h2><a id="kataja---visualizing-biolinguistics" class="anchor" href="#kataja---visualizing-biolinguistics"
+               aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://www.kataja.purma.fi">Kataja - visualising biolinguistics</a></h2>
+        <div class="flex">
+            <a href="http://www.kataja.purma.fi"><picture class="flex-item"><img src="images/katajascreen.png" width="320" height="200" alt="Kataja screenshot"/></picture></a>
+            <div class="flex-item caption">
+                <p>Kataja is an environment for visualising inner workings of linguistic models in generative tradition. I use
+                    it as a testing ground for minimal parsers, but it is a capable tool for drawing syntactic trees for
+                    publications and teaching.</p>
+            </div>
+        </div>
+    </section>
 
-<p><a href="https://github.com/jpurma" class="user-mention">@jpurma</a> -- see what I've been doing lately in GitHub </p>
+    <section>
+        <h2 class="right"><a href="https://github.com/jpurma/d3-ellipse-force">d3-ellipse-force plugin</a></h2>
+        <div class="flex">
+            <div class="flex-item caption">
+                <p>A plugin for d3.js visualisation library to modify popular force-directed network algorithm to handle
+                    elliptic force output, for better layout when nodes have uneven width-height ratio.</p>
+            </div>
+            <a href="https://github.com/jpurma/d3-ellipse-force"><picture class="flex-item"><img src="images/ellipseforce.png" width="320" height="200" alt="Ellipse force screenshot"/></picture></a>
+        </div>
+    </section>
 
-<h3>
-<a id="you-may-be-looking-for-my-brother-lasse-and-purmaconsulting-oy" class="anchor" href="#you-may-be-looking-for-my-brother-lasse-and-purmaconsulting-oy" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>You may be looking for my brother Lasse and <a href="http://purmaconsulting.com">Purmaconsulting OY</a>.</h3>
-      </section>
+    <section>
+        <h2><a href="https://github.com/jpurma/PixelAnts">PixelAnts</a></h2>
+        <div class="flex">
+            <a href="https://github.com/jpurma/PixelAnts"><picture class="flex-item"><img src="images/pixelants.png" width="320" height="200" alt="Pixel ants screenshot"/></picture></a>
+            <div class="flex-item caption">
+                <p>A toy visualisation for ant colony algorithm with numpy and Kivy: Ants foraging with minimal individual
+                    cognition but with ground as their shared read/write workspace. I kind of see it as a metaphor for neural
+                    connections.</p>
+            </div>
+        </div>
+    </section>
 
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+    <section>
+        <h2>For hire</h2>
+
+        <p>I am an experienced full stack developer/architect available for software development consultancy as <strong>Tmi
+            Ihmekoodi</strong> -- preferably scientific or research tools and for good cause. I enjoy both quick and
+            lean prototypes and working for long term scalable projects.</p>
+
+        <ul>
+            <li><strong>Compassionate, skilled, conscientious</strong></li>
+            <li>Python, Javascript, Java</li>
+            <li>PyQt, Pyside, React, Node.js, d3.js, Java Spring, Zope/Plone, DSpace</li>
+            <li>Pandas, Postgres, OracleDB, ZODB, Git, cloud agnostic</li>
+            <li>Docker, Ansible, Jenkins, Gitlab workflows</li>
+            <li>Cognitive science, machine learning, classic AI</li>
+        </ul>
+        <p>For business, contact jukka.purma+ihmekoodi @ gmail... dot... com...</p>
+    </section>
+
+    <section>
+        <p>I have been software developer, project researcher and doctoral student in Aalto University school of Arts,
+            Design and Architecture, in <a href="http://legroup.uiah.fi">Learning Environments Research Group</a>. For
+            the last few years I have been external consultant / fullstack developer for University of Helsinki.</p>
+        <p>My main personal project is Kataja, visualisation environment for syntactic models in
+            minimalist/biolinguistic flavor.</p>
+    </section>
+    <section>
+        <h3>
+            <a id="you-may-be-looking-for-my-brother-lasse-and-purmaconsulting-oy" class="anchor"
+               href="#you-may-be-looking-for-my-brother-lasse-and-purmaconsulting-oy" aria-hidden="true"><span
+                    aria-hidden="true" class="octicon octicon-link"></span></a>You may be looking for my brother Lasse
+            and <a href="http://purmaconsulting.com">Purmaconsulting OY</a>.</h3>
+    </section>
+
+</div>
+<!--[if !IE]>
+<script>fixScale(document);</script><![endif]-->
+
+</body>
 </html>
