--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
                     href="https://madebygraham.com">mattgraham</a></span>
         </div>
 
-        <p>I make visualisations and natural language syntax parsers with Python & Javascript. I am <span
-                class="yellow-tag">partially&nbsp;available</span> for freelance software / fullstack development. </p>
+        <p>I make visualisations and natural language syntax parsers with Python & Javascript. I am <a href="#hire"
+                class="yellow-tag">partially&nbsp;available</a> for freelance software / fullstack development. </p>
     </section>
 
     <section>
         <h2><a id="kataja---visualizing-biolinguistics" class="anchor" href="#kataja---visualizing-biolinguistics"
                aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://www.kataja.purma.fi">Kataja - visualising biolinguistics</a></h2>
         <div class="flex">
-            <a href="http://www.kataja.purma.fi"><picture class="flex-item"><img src="images/katajascreen.png" width="320" height="200" alt="Kataja screenshot"/></picture></a>
+            <a href="http://www.kataja.purma.fi"><picture class="flex-item"><img src="images/katajascreen.jpg" width="320" height="200" alt="Kataja screenshot"/></picture></a>
             <div class="flex-item caption">
                 <p>Kataja is an environment for visualising inner workings of linguistic models in generative tradition. I use
                     it as a testing ground for minimal parsers, but it is a capable tool for drawing syntactic trees for
@@ -55,14 +55,14 @@
                 <p>A plugin for d3.js visualisation library to modify popular force-directed network algorithm to handle
                     elliptic force output, for better layout when nodes have uneven width-height ratio.</p>
             </div>
-            <a href="https://github.com/jpurma/d3-ellipse-force"><picture class="flex-item"><img src="images/ellipseforce.png" width="320" height="200" alt="Ellipse force screenshot"/></picture></a>
+            <a href="https://github.com/jpurma/d3-ellipse-force"><picture class="flex-item"><img src="images/ellipseforce.jpg" width="320" height="200" alt="Ellipse force screenshot"/></picture></a>
         </div>
     </section>
 
     <section>
         <h2><a href="https://github.com/jpurma/PixelAnts">PixelAnts</a></h2>
         <div class="flex">
-            <a href="https://github.com/jpurma/PixelAnts"><picture class="flex-item"><img src="images/pixelants.png" width="320" height="200" alt="Pixel ants screenshot"/></picture></a>
+            <a href="https://github.com/jpurma/PixelAnts"><picture class="flex-item"><img src="images/pixelants.jpg" width="320" height="200" alt="Pixel ants screenshot"/></picture></a>
             <div class="flex-item caption">
                 <p>A toy visualisation for ant colony algorithm with numpy and Kivy: Ants foraging with minimal individual
                     cognition but with ground as their shared read/write workspace. I kind of see it as a metaphor for neural
@@ -72,11 +72,11 @@
     </section>
 
     <section>
-        <h2>For hire</h2>
+        <h2><a name="hire">For hire</a></h2>
 
         <p>I am an experienced full stack developer/architect available for software development consultancy as <strong>Tmi
             Ihmekoodi</strong> -- preferably scientific or research tools and for good cause. I enjoy both quick and
-            lean prototypes and working for long term scalable projects.</p>
+            lean prototypes and working for long term scalable projects. I am located in Helsinki.</p>
 
         <ul>
             <li><strong>Compassionate, skilled, conscientious</strong></li>
