--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Jukka Purma / Tmi Ihmekoodi / jpurma</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
 </head>
 <body>
 
@@ -36,8 +27,7 @@
     </section>
 
     <section>
-        <h2><a id="kataja---visualizing-biolinguistics" class="anchor" href="#kataja---visualizing-biolinguistics"
-               aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://www.kataja.purma.fi">Kataja - visualising biolinguistics</a></h2>
+        <h2><a href="http://www.kataja.purma.fi">Kataja - visualising biolinguistics</a></h2>
         <div class="flex">
             <a href="http://www.kataja.purma.fi"><picture class="flex-item"><img src="images/katajascreen.jpg" width="320" height="200" alt="Kataja screenshot"/></picture></a>
             <div class="flex-item caption">
@@ -105,8 +95,5 @@
     </section>
 
 </div>
-<!--[if !IE]>
-<script>fixScale(document);</script><![endif]-->
-
 </body>
 </html>
