Keep viewport-tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -87,11 +88,7 @@
             minimalist/biolinguistic flavor.</p>
     </section>
     <section>
-        <h3>
-            <a id="you-may-be-looking-for-my-brother-lasse-and-purmaconsulting-oy" class="anchor"
-               href="#you-may-be-looking-for-my-brother-lasse-and-purmaconsulting-oy" aria-hidden="true"><span
-                    aria-hidden="true" class="octicon octicon-link"></span></a>You may be looking for my brother Lasse
-            and <a href="http://purmaconsulting.com">Purmaconsulting OY</a>.</h3>
+        <h3>You may be looking for my brother Lasse and <a href="http://purmaconsulting.com">Purmaconsulting OY</a>.</h3>
     </section>
 
 </div>
